--- a/work/hos/services/web/index.html
+++ b/work/hos/services/web/index.html
@@ -6,6 +6,7 @@
     <title>H-OS Admin</title>
   </head>
   <body>
+    <!-- prototype-launcher-marker -->
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
