--- a/work/hos/services/web/index.html
+++ b/work/hos/services/web/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <!-- prototype-launcher-marker -->
-    <div id="root"></div>
+    <div id="root" data-marker="hos-home"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
