--- a/work/marketplace-web/index.html
+++ b/work/marketplace-web/index.html
@@ -6,7 +6,7 @@
     <title>Marketplace</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" data-marker="marketplace-app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
